# fast-methods

./: .travis.yml  Dockerfile  README.md  asgi.py  docker-compose.yml  pyproject.toml  requestments
app/: main.py
app/api/: api.py  utils.py
app/api/endpoints/: market.py  methods.py
app/api/mongo/: dataInDB.py
app/models/: __init__.py  body_model.py  response_model.py
app/mongo/: dataInDB.py
app/redis/: test_redis.py
config/: testing.py
tests/: conftest.py  test_detail.py  utils.py
utils/: mongodb.py  redis.py  redis_pool.py
