[tool.poetry]
name = "fast-methods"
version = "0.1.0"
description = ""
authors = ["lq411122 <1067205964@qq.com>"]
license = "MIT"

[[tool.poetry.source]]
name = 'tsinghua'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'


[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "0.4.0"
aiohttp = "3.6.2"
aniso8601 = "7.0.0"
async-exit-stack = "1.0.1"
async-generator = "1.10"
async-timeout = "3.0.1"
asynctest = "0.13.0"
attrs = "19.3.0"
bcrypt = "3.1.7"
certifi = "2019.11.28"
cffi = "1.14.0"
chardet = "3.0.4"
Click = "7.0"
coordinates = "0.4.0"
cryptography = "2.8"
databases = "0.2.6"
dnspython = "1.16.0"
email-validator = "1.0.5"
fastapi = "0.48.0"
graphene = "2.1.8"
graphql-core = "2.3.1"
graphql-relay = "2.0.1"
h11 = "0.9.0"
httptools = "0.0.13"
idna = "2.9"
importlib-metadata = "1.5.0"
itsdangerous = "1.1.0"
Jinja2 = "2.11.1"
jsonify = "0.5"
MarkupSafe = "1.1.1"
more-itertools = "8.2.0"
motor = "2.1.0"
multidict = "4.7.5"
packaging = "20.1"
passlib = "1.7.2"
pluggy = "0.13.1"
promise = "2.3"
py = "1.8.1"
pycparser = "2.19"
pydantic = "1.4"
PyJWT = "1.7.1"
pymongo = "3.10.1"
pyOpenSSL = "19.1.0"
pyparsing = "2.4.6"
python-dateutil = "2.8.1"
python-dotenv = "0.10.3"
python-multipart = "0.0.5"
PyYAML = "5.3"
requests = "2.23.0"
Rx = "1.6.1"
six = "1.14.0"
slugify = "0.0.1"
SQLAlchemy = "1.3.13"
starlette = "0.12.9"
style = "1.1.0"
ujson = "1.35"
update = "0.0.1"
urllib3 = "1.25.8"
unidecode = "1.1.1"
uvicorn = "0.11.2"
uvloop = "0.14.0"
wcwidth = "0.1.8"
websockets = "8.1"
yarl = "1.4.2"
zipp = "3.0.0"


[tool.poetry.dev-dependencies]
pytest = "5.3.5"
Faker = "4.0.1"
text-unidecode = "1.3"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
